--- a/js_5/package.json
+++ b/js_5/package.json
@@ -7,6 +7,9 @@
     "colors": "^1.1.2"
   },
   "devDependencies": {},
+  "bin": {
+    "chat": "./server.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
